fixed profile page not displaying saved battletags correctly on mobile

--- a/app/components/componentStyles/UserProfileDataviewComponent.css
+++ b/app/components/componentStyles/UserProfileDataviewComponent.css
@@ -94,7 +94,6 @@
   }
 
   .user-profile-saved-battletags-list {
-    width: 60%;
     gap: 3em;
     text-wrap: wrap;
   }
